# animation-character-identification

./: .gitignore  CMakeLists.txt  README.md  _c_s_v_iterator_8h.html  _c_s_v_iterator_8h__dep__incl.dot  _c_s_v_iterator_8h__dep__incl.md5  _c_s_v_iterator_8h__incl.dot  _c_s_v_iterator_8h__incl.md5  _c_s_v_iterator_8h_source.html  _dataset_i_o_8h.html  _dataset_i_o_8h__dep__incl.dot  _dataset_i_o_8h__dep__incl.md5  _dataset_i_o_8h__incl.dot  _dataset_i_o_8h__incl.md5  _dataset_i_o_8h_source.html  _disjoint_set_8hpp.html  _disjoint_set_8hpp__dep__incl.dot  _disjoint_set_8hpp__dep__incl.map  _disjoint_set_8hpp__dep__incl.md5  _disjoint_set_8hpp__incl.dot  _disjoint_set_8hpp__incl.map  _disjoint_set_8hpp__incl.md5  _disjoint_set_8hpp_source.html  _felzenszwalb_8hpp.html  _felzenszwalb_8hpp__dep__incl.dot  _felzenszwalb_8hpp__dep__incl.map  _felzenszwalb_8hpp__dep__incl.md5  _felzenszwalb_8hpp__incl.dot  _felzenszwalb_8hpp__incl.map  _felzenszwalb_8hpp__incl.md5  _felzenszwalb_8hpp_a63881e4b3642fa9c8c98d0789eb3c75f_cgraph.map  _felzenszwalb_8hpp_a63881e4b3642fa9c8c98d0789eb3c75f_cgraph.md5  _felzenszwalb_8hpp_afc65b87bcefeccabe7d297b2a9ff4960_cgraph.map  _felzenszwalb_8hpp_afc65b87bcefeccabe7d297b2a9ff4960_cgraph.md5  _felzenszwalb_8hpp_source.html  _graph_partitions_8h.html  _graph_partitions_8h__dep__incl.dot  _graph_partitions_8h__dep__incl.map  _graph_partitions_8h__dep__incl.md5  _graph_partitions_8h__incl.dot  (+500 more)
aci/: ACIConfig.h.in  CMakeLists.txt  CSVIterator.h  DatasetIO.cpp  DatasetIO.h  DebugLibs.props  DirichletEigenSubspaceClassifier.cpp  DirichletEigenSubspaceClassifier.h  DirichletEigenSubspaceClassifierTest.cpp  DirichletEigenSubspaceClassifierTest.h  DisjointSet.cpp  DisjointSet.hpp  Doxyfile  Felsenwalb.cpp  Felsenwalb.hpp  Felzenszwalb.cpp  Felzenszwalb.hpp  GraphPartitions.cpp  GraphPartitions.h  GraphSpectra.cpp  GraphSpectra.h  GraphSpectraTest.cpp  GraphSpectraTest.h  ImageGraphs.cpp  ImageGraphs.h  ImageGraphsTest.cpp  ImageGraphsTest.h  IsoPerimetricGraphPartioning.cpp  IsoperimetricGraphPartitioning.h  IsoperimetricGraphPartitioningTest.cpp  IsoperimetricGraphPartitioningTest.h  Kernels.cpp  Kernels.h  KuwaharaFilter.cpp  KuwaharaFilter.h  LabeledGraph.hpp  LabelledGraph.hpp  LocallyLinearEmbeddings.cpp  LocallyLinearEmbeddings.h  LocallyLinearEmbeddingsTest.cpp  (+74 more)
aci/ConsoleApplication1/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters
aci/Debug/: CL.write.1.tlog  animation-character-identification.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
aci/Release/: CL.write.1.tlog  cl.command.1.tlog  (+8 more)
(+450 files in other folders)
